--- a/index.html
+++ b/index.html
@@ -14,7 +14,79 @@
     <title>Weather App</title>
   </head>
   <body>
-    <button class="btn btn-primary">Click me</button>
+    <div class="container">
+      <div class="row search">
+        <form id="search-city">
+          <input type="text" placeholder="Enter city" id="city-input" />
+          <input type="submit" value="Search" class="submit-button" />
+          <input
+            type="button"
+            value="My Location"
+            class="current-location-button"
+            id="current-location-button"
+          />
+        </form>
+      </div>
+      <div class="row todays-weather">
+        <div class="col-6">
+          <h1 id="city">City</h1>
+          <h5 id="date"></h5>
+          <div class="row">
+            <div class="col current-temperature">
+              <span id="current-temperature"></span>
+              <span class="degree"
+                ><a href="#" id="celsius" class="active-degree">°C</a>|<a
+                  href="#"
+                  id="fahrenheit"
+                  >°F</a
+                ></span
+              >
+            </div>
+            <div class="col other-current-data">
+              Feels like <span id="feels-like"></span>°C
+              <br />
+              Humidity: <span id="humidity"></span>%
+              <br />
+              Wind: <span id="wind"></span> km/h
+            </div>
+          </div>
+        </div>
+        <div class="col-6">
+          <img
+            src="images/sunny_cloudy.png"
+            alt="partly cloudy"
+            class="image-current-weather"
+          />
+        </div>
+      </div>
+      <div class="row coming-weather">
+        <div class="col forecast">
+          <img src="images/sunny.png" alt="sunny" class="image-forecast" />
+          <p class="date-forecast">Tue, 04.10.</p>
+          <p class="temperature-forecast">3°C/16°C</p>
+        </div>
+        <div class="col forecast">
+          <img src="images/cloudy.png" alt="cloudy" class="image-forecast" />
+          <p class="date-forecast">Wed, 05.10.</p>
+          <p class="temperature-forecast">4°C/11°C</p>
+        </div>
+        <div class="col forecast">
+          <img src="images/windy.png" alt="windy" class="image-forecast" />
+          <p class="date-forecast">Thu, 06.10.</p>
+          <p class="temperature-forecast">5°C/8°C</p>
+        </div>
+        <div class="col forecast">
+          <img src="images/stormy.png" alt="stormy" class="image-forecast" />
+          <p class="date-forecast">Fri, 07.10.</p>
+          <p class="temperature-forecast">4°C/9°C</p>
+        </div>
+        <div class="col forecast">
+          <img src="images/sunny.png" alt="sunny" class="image-forecast" />
+          <p class="date-forecast">Sat, 08.10.</p>
+          <p class="temperature-forecast">4°C/16°C</p>
+        </div>
+      </div>
+    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
