Add reference to open-source code

--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
         </div>
       </div>
     </div>
+    <span class="reference"
+      ><a href="https://github.com/Joodie66/weather-app">Open-source code</a> by
+      Carla von Eicken</span
+    >
     <script src="src/index.js"></script>
   </body>
 </html>
