Change reference line

--- a/index.html
+++ b/index.html
@@ -89,8 +89,10 @@
       </div>
     </div>
     <span class="reference"
-      ><a href="https://github.com/Joodie66/weather-app">Open-source code</a> by
-      Carla von Eicken</span
+      ><a href="https://github.com/Joodie66/weather-app" target="_blank"
+        >Open-source code</a
+      >
+      by Carla von Eicken</span
     >
     <script src="src/index.js"></script>
   </body>
