Added country name

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
       <div class="row todays-weather">
         <div class="col-6">
-          <h1 id="city">City</h1>
+          <span id="city">City</span> <span id="country">Country</span>
           <h5 id="date"></h5>
           <div class="row">
             <div class="col current-temperature">
