Started fixing the icons and added a reference

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
         </div>
         <div class="col-6">
           <img
-            src="images/sunny_cloudy.png"
+            id="icon"
+            src=""
             alt="partly cloudy"
             class="image-current-weather"
           />
@@ -63,38 +64,60 @@
       </div>
       <div class="row coming-weather">
         <div class="col forecast">
-          <img src="images/sunny.png" alt="sunny" class="image-forecast" />
+          <img
+            src="images/overcast clouds.png"
+            alt="overcast clouds"
+            class="image-forecast"
+          />
           <p class="date-forecast">Tue, 04.10.</p>
           <p class="temperature-forecast">3°C/16°C</p>
         </div>
         <div class="col forecast">
-          <img src="images/cloudy.png" alt="cloudy" class="image-forecast" />
+          <img
+            src="images/few_clouds.png"
+            alt="few clouds"
+            class="image-forecast"
+          />
           <p class="date-forecast">Wed, 05.10.</p>
           <p class="temperature-forecast">4°C/11°C</p>
         </div>
         <div class="col forecast">
-          <img src="images/windy.png" alt="windy" class="image-forecast" />
+          <img src="images/mist.png" alt="mist" class="image-forecast" />
           <p class="date-forecast">Thu, 06.10.</p>
           <p class="temperature-forecast">5°C/8°C</p>
         </div>
         <div class="col forecast">
-          <img src="images/stormy.png" alt="stormy" class="image-forecast" />
+          <img
+            src="images/thunderstorm.png"
+            alt="thunderstorm"
+            class="image-forecast"
+          />
           <p class="date-forecast">Fri, 07.10.</p>
           <p class="temperature-forecast">4°C/9°C</p>
         </div>
         <div class="col forecast">
-          <img src="images/sunny.png" alt="sunny" class="image-forecast" />
+          <img
+            src="images/clear_sky.png"
+            alt="clear sky"
+            class="image-forecast"
+          />
           <p class="date-forecast">Sat, 08.10.</p>
           <p class="temperature-forecast">4°C/16°C</p>
         </div>
       </div>
     </div>
-    <span class="reference"
-      ><a href="https://github.com/Joodie66/weather-app" target="_blank"
+    <div class="reference">
+      <a href="https://github.com/Joodie66/weather-app" target="_blank"
         >Open-source code</a
       >
-      by Carla von Eicken</span
-    >
+      by Carla von Eicken
+    </div>
+    <div class="reference">
+      Icons created by
+      <a href="https://www.flaticon.com/authors/iconixar" target="_blank"
+        >iconixar</a
+      >
+    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
