--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
       <div class="row coming-weather">
         <div class="col forecast">
           <img
-            src="images/overcast clouds.png"
-            alt="overcast clouds"
+            src="images/broken-clouds-day.png"
+            alt="broken-clouds-day"
             class="image-forecast"
           />
           <p class="date-forecast">Tue, 04.10.</p>
@@ -74,22 +74,26 @@
         </div>
         <div class="col forecast">
           <img
-            src="images/few_clouds.png"
-            alt="few clouds"
+            src="images/few-clouds-day.png"
+            alt="few-clouds-day"
             class="image-forecast"
           />
           <p class="date-forecast">Wed, 05.10.</p>
           <p class="temperature-forecast">4°C/11°C</p>
         </div>
         <div class="col forecast">
-          <img src="images/mist.png" alt="mist" class="image-forecast" />
+          <img
+            src="images/mist-day.png"
+            alt="mist-day"
+            class="image-forecast"
+          />
           <p class="date-forecast">Thu, 06.10.</p>
           <p class="temperature-forecast">5°C/8°C</p>
         </div>
         <div class="col forecast">
           <img
-            src="images/thunderstorm.png"
-            alt="thunderstorm"
+            src="images/thunderstorm-day.png"
+            alt="thunderstorm-day"
             class="image-forecast"
           />
           <p class="date-forecast">Fri, 07.10.</p>
@@ -97,8 +101,8 @@
         </div>
         <div class="col forecast">
           <img
-            src="images/clear_sky.png"
-            alt="clear sky"
+            src="images/clear-sky-day.png"
+            alt="clear-sky-day"
             class="image-forecast"
           />
           <p class="date-forecast">Sat, 08.10.</p>
