--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <div class="col-6">
           <span id="city">City</span> <span id="country">Country</span>
           <h5 id="date"></h5>
+
           <div class="row">
             <div class="col current-temperature">
               <span id="current-temperature"></span>
@@ -43,6 +44,7 @@
                   >°F</a
                 ></span
               >
+              <span id="description"> </span>
             </div>
             <div class="col other-current-data">
               Feels like <span id="feels-like"></span>°C
