Added icons to reference

--- a/index.html
+++ b/index.html
@@ -119,10 +119,16 @@
       by Carla von Eicken
     </div>
     <div class="reference">
+      <img src="images/clear-sky-day.png" alt="clear-sky-day" width="15" />
       Icons created by
       <a href="https://www.flaticon.com/authors/iconixar" target="_blank"
         >iconixar</a
       >
+      <img
+        src="images/scattered-clouds-day.png"
+        alt="scattered-clouds-day"
+        width="15"
+      />
     </div>
     <script src="src/index.js"></script>
   </body>
