Fixed temperature size for 3-digit-temps

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
                   >°F</a
                 ></span
               >
-              <span id="description"> </span>
             </div>
             <div class="col other-current-data">
               Feels like <span id="feels-like"></span>°C
@@ -54,6 +53,7 @@
               Wind: <span id="wind"></span> km/h
             </div>
           </div>
+          <div class="row"><span id="description"> </span></div>
         </div>
         <div class="col-6">
           <img
