--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!--
+To Do: 
+- Change times according to time-zone
+- Add sunrise and sundset
+- Add forecast
+-->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
