Shortened HTML for forecast

--- a/index.html
+++ b/index.html
@@ -80,49 +80,12 @@ To Do:
       <!--Weather forecast-->
       <div class="row coming-weather">
         <div class="col forecast">
-          <img
-            src="images/broken-clouds-day.png"
-            alt="broken-clouds-day"
-            class="image-forecast"
-          />
-          <p class="date-forecast">Tue, 04.10.</p>
-          <p class="temperature-forecast">3°C/16°C</p>
-        </div>
-        <div class="col forecast">
-          <img
-            src="images/few-clouds-day.png"
-            alt="few-clouds-day"
-            class="image-forecast"
-          />
-          <p class="date-forecast">Wed, 05.10.</p>
-          <p class="temperature-forecast">4°C/11°C</p>
-        </div>
-        <div class="col forecast">
-          <img
-            src="images/mist-day.png"
-            alt="mist-day"
-            class="image-forecast"
-          />
-          <p class="date-forecast">Thu, 06.10.</p>
-          <p class="temperature-forecast">5°C/8°C</p>
-        </div>
-        <div class="col forecast">
-          <img
-            src="images/thunderstorm-day.png"
-            alt="thunderstorm-day"
-            class="image-forecast"
-          />
-          <p class="date-forecast">Fri, 07.10.</p>
-          <p class="temperature-forecast">4°C/9°C</p>
-        </div>
-        <div class="col forecast">
-          <img
-            src="images/clear-sky-day.png"
-            alt="clear-sky-day"
-            class="image-forecast"
-          />
-          <p class="date-forecast">Sat, 08.10.</p>
-          <p class="temperature-forecast">4°C/16°C</p>
+          <img src="" alt="" class="image-forecast" />
+          <div class="date-forecast"></div>
+          <div class="temperature-forecast">
+            <span class="forecast-temperature-max"></span>°C/
+            <span class="forecast-temperature-min"></span>°C
+          </div>
         </div>
       </div>
     </div>
