Added JS loop to inject forecast HTML

--- a/index.html
+++ b/index.html
@@ -78,16 +78,7 @@ To Do:
         </div>
       </div>
       <!--Weather forecast-->
-      <div class="row coming-weather">
-        <div class="col forecast">
-          <img src="" alt="" class="image-forecast" />
-          <div class="date-forecast"></div>
-          <div class="temperature-forecast">
-            <span class="forecast-temperature-max"></span>°C/
-            <span class="forecast-temperature-min"></span>°C
-          </div>
-        </div>
-      </div>
+      <div id="forecast"></div>
     </div>
     <!--Reference-->
     <div class="reference">
