Added injection of forecast data

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ To Do:
           />
         </div>
       </div>
-      <!--Weather forecast-->
+      <!--Weather forecast (gets injected by JS loop)-->
       <div id="forecast"></div>
     </div>
     <!--Reference-->
