Removed unit conversion

--- a/index.html
+++ b/index.html
@@ -42,13 +42,7 @@
           <div class="row">
             <div class="col-5 current-temperature">
               <span id="current-temperature"></span>
-              <span class="degree"
-                ><a href="#" id="celsius" class="active-degree">°C</a>|<a
-                  href="#"
-                  id="fahrenheit"
-                  >°F</a
-                ></span
-              >
+              <span class="degree">°C</span>
             </div>
             <!--Other current data-->
             <div class="col other-current-data">
